--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ date: 06/27/2021-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Cat Appreciation</title>
+    <title>Wild Child PEI - Activities List</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
